# blender-mcp

./: .env  CHANGELOG.md  INSTALL.md  Plan.md  README.md  TROUBLESHOOTING.md  UpdatePlan.md  conftest.py  pyproject.toml  requirements.txt  setup.py
%APPDATA%/Blender Foundation/Blender/4.0/scripts/addons/: blendermcp
config/: default.yaml
demos/: chess_set.py
docs/: APIReference.md  CONTRIBUTING.md  InstallationGuide.md  MCPServer.md  TROUBLESHOOTING.md  ToolDevelopment.md  UpdatePlan.md
examples/: advanced_features.py  mcp.json
scripts/: install_addon.py  mcp_stdio.py
src/blendermcp/: __init__.py
src/blendermcp/addon/: __init__.py  executor.py  globals.py  operators.py  panels.py  preferences.py  properties.py  request_listener.py  server_operators.py  tool_viewer.py
src/blendermcp/client/: __init__.py  api_spec.py  batch.py  client.py  config.py  connection.py  errors.py  tools.py
src/blendermcp/client/protocol/: commands.py
src/blendermcp/common/: config.py  errors.py  ipc.py  protocol.py
src/blendermcp/mcp/: __init__.py  adapter.py  blender_tools.py  server.py
src/blendermcp/scripts/: __init__.py  direct_test_mcp_server.py  run_mcp_server.py  standalone_mcp_server.py  start_mcp_service.py  test_mcp_server.py  test_no_asyncio.py
src/blendermcp/server/: __init__.py  api_spec.py  auth.py  config.py  core.py  run_mcp_server.py  run_mcp_server_simple.py  security.py  server.py
src/blendermcp/server/handlers/: __init__.py  blender_handler.py
src/blendermcp/test/: simple_server.py  test_websocket.py
src/blendermcp/tools/: __init__.py  animation_tools.py  material_tools.py  object_tools.py  render_tools.py  scene_tools.py  utils.py
tests/: README.md  __init__.py  conftest.py  mock_bpy.py  run_tests.py  test_auth.py  test_basic_operations.py  test_batch.py  test_client.py  test_config.json  test_config.py  test_connection.py  test_security.py  test_simple.py
tests/compatibility/: test_mcp_compatibility.py
tests/integration/: test_mcp_server.py
tests/performance/: test_mcp_performance.py
tests/stress/: test_mcp_stress.py
