[project]
name = "blendermcp"
version = "0.1.0"
description = "BlenderMCP - Blender Multi-Client Protocol"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "websockets>=10.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=0.19.0",
]
requires-python = ">=3.7"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/yourusername/blendermcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/blendermcp"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.15.0",
    "black>=21.0",
    "flake8>=3.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
