[project]
name = "blender-mcp"
version = "0.1.0"
description = "Blender Model Context Protocol Server"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "websockets>=12.0",
    "python-dotenv>=1.0.1",
    "aiohttp>=3.9.3",
    "pyyaml>=6.0.2",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.25.3"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/xiguadaddy/blender-mcp.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
blender-mcp = "blendermcp.server:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/blendermcp"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.15.0",
    "black>=21.0",
    "flake8>=3.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
